<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="179dp"
        tools:layout_editor_absoluteY="98dp">

        <TextView
            android:id="@+id/textView_epName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textView_epName" />

        <TextView
            android:id="@+id/textView_epAirDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textView_epAirDate" />

        <TextView
            android:id="@+id/textView_epCharInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textView_epCharInfo" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_epCharImgs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button_epMoreInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_epMoreInfo" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>