<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView_locName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textView_locName" />

        <TextView
            android:id="@+id/textView_locType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textView_locType" />

        <TextView
            android:id="@+id/textView_locDimension"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textView_locDimension" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>